✨ feat(Inventory): Quick activation

--- a/Config/Lumen.cfg
+++ b/Config/Lumen.cfg
@@ -1,4 +1,7 @@
 {
     "Language": "English",
     "Cache": "Disabled",
+    "InventoryStyle": "Improved",
+    "InventoryActivatedByFocus": "Weapon",
+    "InventoryActivatedByNumbers": "Object",
 }
